--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -141,7 +141,7 @@
     <div class="separator-line"></div>
     <div class="guides-container">
         <div class="posts-header">
-            <h2><a href="/article/" style="text-decoration: none; color: inherit;" id="guides-title">가이드</a></h2>
+            <h2><a href="/article/" style="text-decoration: none; color: inherit;" id="guides-title">아티클</a></h2>
             <a href="/article/" class="show-more-characters-btn" style="text-decoration: none; color: inherit;"
                 id="show-more-guides-btn"><img src="{{ site.baseurl }}/assets/img/home/news_more2.png" alt="logo"
                     style="max-height: 11px; opacity: 0.75;"></a>
@@ -531,7 +531,7 @@
 
         const sectionTitles = {
             'popular-characters-title': homeT('popular_characters', '인기 괴도', currentLang),
-            'guides-title': homeT('guides', '가이드', currentLang),
+            'guides-title': homeT('guides', '아티클', currentLang),
             'tactic-workshop-title': homeT('tactic_workshop', '택틱 도서관', currentLang)
         };
 
